--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,3 +88,29 @@ p {
 
 
 }
+.quiz-container {
+    max-width: 500px;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    margin-bottom: 1vw;
+
+}
+.question {
+    margin-bottom: 20px;
+}
+.button {
+    font-family: 'Ubuntu Mono', monospace;
+    padding: 10px 20px;
+    color: #333;
+    border: 2px solid #7e7e7e;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+}
+.button:hover {
+    background-color: #7e7e7e;
+    color: white;
+    border-color: #7e7e7e;
+}
