--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,7 +77,7 @@ h2 {
 }
 
 /* Styles for paragraphs */
-p, li {
+p {
     background-color: #D9D9D9; /* Background color */
     padding: 1vw; /* Padding inside paragraphs */
     font-size: 1.3vw; /* Font size relative to viewport width */
@@ -87,6 +87,13 @@ p, li {
     border-bottom: 1px solid #7e7e7e; /* Add a bottom border */
 
 
+}
+li{
+    background-color: #D9D9D9; /* Background color */
+    padding: 1vw; /* Padding inside paragraphs */
+    font-size: 1.3vw; /* Font size relative to viewport width */
+    line-height: 2; /* Line height */
+    color:#333;
 }
 .quiz-container {
     max-width: 500px;
@@ -113,4 +120,9 @@ p, li {
     background-color: #7e7e7e;
     color: white;
     border-color: #7e7e7e;
+}
+
+.lesson1{
+    background-color: #D9D9D9; /* Background color */
+    padding: 1vw;
 }
