--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -180,7 +180,9 @@ hr{
 }
 /* Media query for screens smaller than 768px */
 @media (max-width: 767px) {
-    
+    #logo{
+        display: none;
+    }
     /* CSS for sidebar when active */
     #sidebar.active {
         display: block;
