--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,8 +143,6 @@ li {
     border-radius: 10px;
     background-color: #f9f9f9;
     margin-bottom: 1vw;
-    
-
 }
 .question {
     margin-bottom: 20px;
@@ -188,7 +186,6 @@ img {
 }
 
 @media (max-width: 1100px) {
-    
     img{
         display: flex;
         flex-wrap: wrap;
@@ -230,6 +227,7 @@ img {
         left: 0;
         padding: 1rem;
         background-color: #F3F7AD;
+        color: #452f0a; /* Change to the desired text color */
         border: none;
         cursor: pointer;
         z-index: 9999; /* Ensure it's above other content */
