--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,6 +186,7 @@ img {
     margin: 0;
     width: 700px; /* 250px as a percentage of the viewport width */
     height: auto; /* Retain aspect ratio */
+    border-radius: 20px;
 
 }
 
