--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,6 +189,13 @@ img {
     border-radius: 20px;
 
 }
+img.history-image {
+    width: 500px; /* 250px as a percentage of the viewport width */
+    height: auto; /* Retain aspect ratio */
+    margin: 3vw;
+    margin-top: 1vw;
+    margin-bottom: 2vw;
+}
 
 @media (max-width: 1100px) {
     .command{
@@ -241,6 +248,14 @@ img {
         border: none;
         padding-left: 25vw;
         float: right;
+    }
+    img.history-image{
+        display: flex;
+        flex-wrap: wrap;
+        width: 75vw; /* 250px as a percentage of the viewport width */
+        margin: 0;
+        border-radius: none;
+        padding-top: 1vw;
     }
     #logo{
         display: none;
